# ldifdiff

./: README.md  pyproject.toml
src/: ldifdiff.py
