[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[tools.setuptools.packages.find]
where = ["src"]

[project]
name = "ldifdiff"
dynamic = ["version"]
readme = "README.md"
description = "Tool for comparing LDIF files"
license = { text = "MIT" }
requires-python = ">3.9"
dependencies = [
    'ldif',
    'colorama'
]

[project.urls]
repository = "https://github.com/pfptcommunity/ldifdiff"
#homepage = "https://github.com/pfptcommunity/ldifdiff"
#documentation = "https://github.com/pfptcommunity/ldifdiff"
#changelog = "https://github.com/pfptcommunity/ldifdiff"

[project.scripts]
ldifdiff = "ldifdiff:main"